--- a/wp-content/themes/taf2/style.css
+++ b/wp-content/themes/taf2/style.css
@@ -691,6 +691,10 @@ img.auditions {
 	max-height: 200px;
 }
 
+img.pastprojects {
+	max-width: 121px;
+}
+
 /*--------------------------------------------------------------
 10.1 Posts and pages
 --------------------------------------------------------------*/
